# ccwc

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  WordCountTest.cpp
